<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".registration.RegistrationActivity">

    <LinearLayout
        android:id="@+id/userRegLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/edittext_border"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/regFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:inputType="textCapWords"/>


        <EditText
            android:id="@+id/regPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userNumber"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/regBirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userBirthdate"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/regDriverLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driverLicense"
            android:inputType="date"/>

        <RadioGroup
            android:id="@+id/regGenderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/regMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userGenderMale"
                android:checked="true"
                android:layout_weight="0.8"
                android:orientation="horizontal"/>

            <RadioButton
                android:id="@+id/regFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userGenderFemale"
                android:layout_weight="0.2"
                android:orientation="horizontal"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/regCarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/edittext_border"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/userRegLayout">

        <RadioGroup
            android:id="@+id/regEngType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/regEngICE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carEngineICE"
                android:checked="true"
                android:layout_weight="0.7"
                android:orientation="horizontal"/>

            <RadioButton
                android:id="@+id/regEngE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carEngineE"
                android:layout_weight="0.3"
                android:orientation="horizontal"/>
        </RadioGroup>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/regCarBrand"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize = "18sp"
                android:hint="@string/regCarBrand" />

            <Spinner
                android:id="@+id/regCarBrandSpinner"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:padding="11dp"
                android:entries="@array/car_brand"
                android:hint="@string/regCarBody"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/regCarModel"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize= "18sp"
                android:hint="@string/regCarModel" />

            <Spinner
                android:id="@+id/regCarModelSpinner"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:padding="11dp"
                android:hint="@string/regCarModel"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/carBrand"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize= "18sp"
                android:hint="@string/regCarBody" />

            <Spinner
                android:id="@+id/regCarBodySpinner"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:padding="11dp"
                android:entries="@array/car_body"
                android:hint="@string/regCarBody"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/regCarColor"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize= "18sp"
                android:hint="@string/regCarColor"/>

            <Spinner
                android:id="@+id/regCarColorSpinner"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:padding="11dp"
                android:entries="@array/car_color"
                android:hint="@string/regCarColor"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>



        <EditText
            android:id="@+id/regCarNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:hint="@string/regCarNumber"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/regCarPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher_round"
            app:civ_border_width="4dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <Button
        android:id="@+id/regButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:text="@string/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/regCarLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
