<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.FiltersForRiderActivity"
    android:background="@color/gray">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/filBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="20dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:id="@+id/filDoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="20dp"
                android:src="@drawable/baseline_done_24"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterCar"
        android:layout_below="@+id/filterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_border"
        android:padding="20dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/carFilterTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/filterForCar"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/filEngTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carFilterTitle"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/filIceType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:text="@string/carEngineICE" />

            <RadioButton
                android:id="@+id/filAnywayType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:text="@string/anyway" />

            <RadioButton
                android:id="@+id/filEType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:text="@string/carEngineE" />

        </RadioGroup>



        <RelativeLayout
            android:id="@+id/filCarBodyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/filEngTypeGroup"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/filCarBody"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize= "18sp"
                android:hint="@string/regCarBody" />

            <Spinner
                android:id="@+id/filCarBodySpinner"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:padding="11dp"
                android:entries="@array/car_body"
                android:hint="@string/carBody"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/filResetCarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/resetFilters"
            app:layout_constraintTop_toBottomOf="@+id/filCarBodyLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterUser"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_border"
        android:padding="20dp">

        <TextView
            android:id="@+id/filUserTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/filterFor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/filGenderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filUserTitle"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/filMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:text="@string/userGenderMale" />

            <RadioButton
                android:id="@+id/filAnywayGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:text="@string/anyway" />

            <RadioButton
                android:id="@+id/filFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:text="@string/userGenderFemale" />

        </RadioGroup>

        <EditText
            android:id="@+id/filMinAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/filMinAge"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filGenderGroup" />

        <EditText
            android:id="@+id/filMaxAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filMaxAge"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filMinAge" />

        <Button
            android:id="@+id/filResetUserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/resetFilters"
            app:layout_constraintTop_toBottomOf="@+id/filMaxAge" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>

