<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".maps.DriverMapsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/driver_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="20dp"
                android:src="@drawable/baseline_manage_accounts_24"
                android:contentDescription="Account"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:id="@+id/driver_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="20dp"
                android:src="@drawable/baseline_filter_alt_24"
                android:contentDescription="Filter"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/driverSetRatingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_border"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_above="@id/tripManageLayout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <ImageButton
                android:id="@+id/star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_star_border_24"
                android:background="@color/white"
                android:onClick="onStarClicked"
                android:tag="1"/>


            <ImageButton
                android:id="@+id/star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_star_border_24"
                android:background="@color/white"
                android:onClick="onStarClicked"
                android:tag="2"/>


            <ImageButton
                android:id="@+id/star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_star_border_24"
                android:background="@color/white"
                android:onClick="onStarClicked"
                android:tag="3"/>

            <ImageButton
                android:id="@+id/star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_star_border_24"
                android:background="@color/white"
                android:onClick="onStarClicked"
                android:tag="4"/>


            <ImageButton
                android:id="@+id/star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_star_border_24"
                android:background="@color/white"
                android:onClick="onStarClicked"
                android:tag="5"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="4dp"
            android:text="@string/sendComplaint"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tripManageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_border"
        android:padding="20dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/riderInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/driverImageRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/riderImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher_round"
                app:civ_border_width="4dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/riderRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/userRating"
                android:textSize="12sp"

                android:layout_gravity="center"/>

        </LinearLayout>


            <LinearLayout
                android:id="@+id/riderInfoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@drawable/edittext_border"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/riderName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userName"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/riderNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userNumber"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/riderTripPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tripPrice"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/distanceToRider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distanceToRider"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/driverDistanceToFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distanceToFinish"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/riderTripDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distanceOfTrip"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/riderInfo">

        <LinearLayout
            android:id="@+id/buttonsConfirmationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/acceptTrip" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelTrip" />
        </LinearLayout>

        <Button
            android:id="@+id/statusButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/iAmHere"
            android:visibility="gone" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stopTrip"
            android:textColor="@color/red"
            android:visibility="gone"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>


